targetWebKitchen/style.css
/* ... */
a:hover {
    text-decoration: none;
}

.btn_stroke {
    font-weight: 300;
    font-size: 15px;
    text-align: center;
    color: #000000;
    border: 1px solid #C69761;
    box-sizing: border-box;
    border-radius: 10px;
    padding: 9px 85px;
    background: linear-gradient(90deg, #C69761, #C69761);
    background-repeat: no-repeat;
    background-size: 0 100%;
    transition: background-size .6s 0s;
}

.btn_stroke:hover {
    background-size: 100% 100%;
    color: #2e475e;
    text-decoration: none;
}

/*****************************************************************/

/*****************************************************************/

/*********************** H E A D E R *****************************/

/*****************************************************************/

/*****************************************************************/

header {
    padding-top: 25px;
    position: absolute;
    width: 100%;
    z-index: 100;
    background-color: #ffffff8f;
}

header ul {
    list-style: none;
    display: inline-flex;
    padding: 0;
}

header .logo svg {
    width: 183px;
    transform: rotate(-4.5deg);
}

header #menu-droite {
    display: inline-flex;
}

header #menu-droite .menu a {
    font-weight: normal;
    font-size: 14px;
    color: #000000;
}

header #menu-droite .menu li:first-child {
    margin-right: 20px;
}

header ul svg {
    width: 24px;
    height: 24px;
}

header ul.social {
    margin-left: 43px;
}

header ul.social li:nth-child(2) {
    margin: 0 1rem;
}

/*****************************************************************/

/*****************************************************************/

/**************************** FOOTER *****************************/

/*****************************************************************/

/*****************************************************************/

footer {
    background: rgba(198, 151, 97, 0.05);
    padding-top: 45px;
}

footer .footer-principal {
    padding-bottom: 60px;
}

footer .logo svg {
    margin-bottom: 2rem;
    transform: rotate(-4.5deg);
}

footer ul {
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: center;
    width: 100%;
}

footer ul.social li {
    margin-right: 16px;
}

footer ul.social li:last-child {
    margin-right: 0;
}

/* footer .menu-menu-footer {
    width: 100%;
    text-align: center;
} */

footer .menu li {
    margin-right: 20px;
}

footer .menu li:last-child {
    margin-right: 0;
}

footer .social ul {
    justify-content: center;
}

footer .social svg {
    width: 24px;
    height: 24px;
}

footer .menu a {
    font-weight: 300;
    font-size: 14px;
    text-align: center;
    color: #664A2A;
}

footer #mail {
    font-weight: normal;
    font-size: 15px;
    text-align: center;
    color: #C69761;
    margin-bottom: 25px;
}

footer .sib-email-area {
    margin-bottom: 2rem;
}

footer .sib-email-area input[value] {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    text-align: center;
    color: #FFFFFF;
}

footer .sib-email-area input[type='email'] {
    border-radius: 10px 0 0 10px;
    background: #FFFFFF;
    border: 1px solid #C69761;
    box-sizing: border-box;
    margin: 0;
    padding-left: 12px;
}

footer .sib-email-area input[type='email']:focus {
    outline: none;
}

footer .sib-email-area input[type='submit'] {
    border-radius: 0 10px 10px 0;
    border: 1px solid #C69761;
    background-color: #C69761;
    color: white;
    padding-top: 2.5px;
}

footer .sib-email-area input::placeholder {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 300;
    font-size: 14px;
    text-align: center;
    color: #000000;
    padding: 12px;
}

footer #credits {
    background-color: #3F3F3F;
}

footer #credits a, footer #credits p {
    font-weight: bold;
    font-size: 12px;
    line-height: 93.4%;
    /* or 11px */
    text-align: center;
    color: #FFFFFF;
}

/*****************************************************************/

/*****************************************************************/

/********************* F R O N T P A G E *************************/

/*****************************************************************/

/*****************************************************************/

section#hero {
    height: 670px;
    position: relative;
    background-position-x: 266%;
    background-position-y: center;
    background-repeat: no-repeat;
}

section#hero:before {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #F2F2F4;
    z-index: -1;
}

section#hero #fond_carotte {
    position: absolute;
    z-index: 0;
    width: 100%;
    text-align: center;
    top: -43px;
}

/* section#hero #back-hero {
    clip-path: circle(427.5px at 305px 236px);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
} */

section#hero .logo, section#hero h1 {
    position: relative;
    z-index: 10;
}

section#hero #image_de_fond {
    position: absolute;
    background-image: url(http://localhost/teamsidekitchen/wp-content/uploads/2021/11/hero-photo-ingredients.jpg);
    top: 0;
    left: 0;
    bottom: 0;
    width: 56%;
    background-position-x: 100%;
    background-position-y: 60%;
}

section#hero h1 {
    font-weight: bold;
    font-size: 20px;
    line-height: 102.5%;
    text-align: center;
    color: #000000;
    margin-top: 30px;
    margin-bottom: 100px;
}

section#hero #inputRecette {
    background: rgba(0, 0, 0, 0.03);
    border-radius: 15px;
    border: none;
    height: 65px;
    width: 100%;
    padding: 25px 40px;
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    color: #1A1717;
    position: relative;
}

section#hero #inputRecette svg {
    position: absolute;
    right: 30px;
}
/* ... */

